# Aruco-Test

./: .gitignore  CMakeLists.txt  README.md  astar.cc  calibration_config.xml  main.cc  out_camera_data.xml  test_fifo_reader.cc  test_fifo_writer.cc  test_marker_mapper.cc  test_marker_mapper_loop.cc
